--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,10 @@ target 'HFVoting' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
+
+  pod 'RNZipArchive', :path => '../node_modules/react-native-zip-archive'
+
   target 'HFVotingTests' do
     inherit! :complete
     # Pods for testing
