--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.16.6",
+    "react-native-zip-archive": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
