--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.2.3",
+    "@react-navigation/stack": "^5.2.18",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.16.6",
-    "react-native-zip-archive": "^5.0.2"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
+    "react-native-zip-archive": "^5.0.2",
+    "react-navigation": "^4.3.9",
+    "react-navigation-stack": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
